--- a/templates/views/elearning/user/profile.jade
+++ b/templates/views/elearning/user/profile.jade
@@ -1,9 +1,5 @@
 extends ../../../layouts/elearning
 
-//- block css
-  link(rel="stylesheet" type="text/css" href="/styles/analytics.css")
-
-
 block js
   | $('.collapse').collapse()
 
@@ -11,10 +7,10 @@ block viewProfile
   .col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
     .row
       if user.photo.exists
-        +img-available-center(user._.photo, user.name.full, 150, 150)
+        +img-available-rounded-center(user._.photo, user.name.full, 150, 150)
         //- img(src=user._.photo.limit(150,150), alt=user.name.full).img-rounded 
       else 
-        +img-not-available-center(150, 150)
+        +img-na-rounded-center(150, 150)
     hr
     .row
       label Name: 
@@ -40,10 +36,11 @@ block editProfile
       .row
         input(type='hidden', name='action', value='profile.uploadPhoto')
         if user.photo.exists
-          +img-available-center(user._.photo, user.name.full, 150, 150)
+          +img-available-rounded-center(user._.photo, user.name.full, 150, 150)
           //- img(src=user._.photo.limit(150,150), alt=user.name.full).img-rounded.center-block 
         else 
-          +img-not-available-center(150, 150)
+          +img-na-rounded-center(150, 150)
+        
         a.btn.btn-link.center-block(role='button', data-toggle='collapse', href='#changePhoto', aria-hidden='false', aria-controls='changePhoto') Change Photo
 
         .collapse(id='changePhoto')
@@ -123,19 +120,7 @@ block editProfile
           hr
           .row.pull-right
             button(type='submit').btn.btn-primary Change
-  .row
-    a.btn.btn-link(href='/profile/elearning/user-activity') View Elearning Activity
-    //- .col-md-4
-      img(src=user.photo.exists ? user._.photo.thumbnail(200,200) : 'http://placehold.it/200x200', alt=user.name.full, width=200, height=200).img-rounded.center-block
-      hr
-      form.contact-form(method='post')
-        .form-group
-          input(id='photo_image', name='image', type='file')
-          input(id='photo_image_cache', name='image_cache', type='hidden')
-        button(type='submit', value='Submit Photo').btn.btn-link
-
-
-
+  
 block content
   .row
     .col-md-3.col-sm-4.dashboard
