--- a/templates/views/elearning/learningObject.jade
+++ b/templates/views/elearning/learningObject.jade
@@ -280,6 +280,6 @@ mixin feedback(action)
       | Feedback
     .panel-body
       if user
-        a.btn.btn-link(href='/elearning/feedback') Give a feedback!
+        a.btn.btn-link(href='/elearning/user-activity/feedback') Give a feedback!
       else
-        a.btn.btn-link(href='/keystone/signin?from=/elearning/feedback') Sign in to give a feedback!
+        a.btn.btn-link(href='/keystone/signin?from=/elearning/user-activity/feedback') Sign in to give a feedback!
