Refactored analytics graphs

--- a/templates/views/elearning/analytics.jade
+++ b/templates/views/elearning/analytics.jade
@@ -8,32 +8,32 @@ mixin Most(mostpopular, mostcommented, mostreacted, numCourses, numLO, numUsers,
       .col-md-12.col-xs-12
         div(id="allVisit")
       //-.col-md-4.col-xs-12
-      .col-md-8.col-xs-12
+      .col-md-9.col-xs-12
         div(id="userVisitsWorld")
-      .col-md-4.col-xs-12
+      .col-md-3.col-xs-12
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-book(aria-hidden='true')
-          |  NUMBER OF COURSES: 
+          |  COURSES: 
           span= numCourses
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-file(aria-hidden='true')
-          |  NUMBER OF LEARNING OBJECTS: 
+          |  LEARNING OBJECTS: 
           span= numLO
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-user(aria-hidden='true')
-          |  NUMBER OF USERS: 
+          |  E-LEARNING USERS: 
           span= numUsers
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-signal(aria-hidden='true')
-          |  NUMBER OF VIEWS: 
+          |  VIEWS: 
           span= numViews
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-thumbs-up(aria-hidden='true')
-          |  NUMBER OF REACTIONS: 
+          |  REACTIONS: 
           span= numReactions
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-comment(aria-hidden='true')
-          |  NUMBER OF COMMENTS: 
+          |  COMMENTS: 
           span= numComments
       .col-md-6.col-xs-12
         div(id="popularperregion")
