--- a/public/styles/analytics.css
+++ b/public/styles/analytics.css
@@ -15,7 +15,7 @@
 .x.axis path {
     display: none;
 }
-
+/*
 @media (min-width: 768px) {
   .sidebar-nav .navbar .navbar-collapse {
     padding: 0;
@@ -38,7 +38,7 @@
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
   background-color:  #3062B7;
   color: white;
-}
+}*/
 
 .dashboard{
 	border-left: 1px solid gray;
