--- a/templates/layouts/elearning-user.jade
+++ b/templates/layouts/elearning-user.jade
@@ -1,8 +1,6 @@
 include ../mixins/flash-messages
-include ../mixins/elearning/search
-include ../mixins/elearning/navigation
-include ../mixins/elearning/learning-content
 include ../mixins/elearning/helper
+include ../mixins/elearning/navigation
 
 doctype html
 html
@@ -20,6 +18,13 @@ html
     //- All .less files will be automatically compiled and minified in production.
     link(href="/styles/site.min.css", rel="stylesheet")
     //- link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css', integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ', crossorigin='anonymous')
+
+    //- link(rel="stylesheet" type="text/css" href="/styles/cards.css")
+
+    //- link(rel="stylesheet" type="text/css" href="/styles/technology.css")
+    
+    script(src='/js/d3/d3.min.js')
+    script(src='/js/d3pie/d3pie.min.js')
 
     //- This file provides the default styling for the KeystoneJS Content Editor
     if user && user.canAccessKeystone
@@ -46,7 +51,7 @@ html
     #header
       //- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
       //- ... or completely change this header to suit your design.
-
+    
       div(role="navigation").navbar.navbar-style1.navbar-fixed-top
         div(style="height:85px; background-color:white;")
           .navbar-header
@@ -75,36 +80,36 @@ html
             li
               a(href=breadcrumb.link) #{breadcrumb.text}
               
-
         #user-login-links
           if user
-            if user.isElearningUser == true
-              a(href='/elearning/profile').not-active.login-link
+            if user.isElearningAdmin == true
+              a(href="/elearning/profile").not-active.login-link
                 span.user-name #{user.name.full} &ensp;
                 i.fa.fa-bell-o(aria-hidden="true")
                 | &emsp;
-              a(href='/keystone/signout').not-active.login-link Sign Out
-              
+              a(href="/keystone/signout").not-active.login-link Sign Out
           else
-            a(href='/keystone/signin?from=' + loginRedirect, class="not-active login-link") Sign In
+            a(href='/keystone/signin?from=' + loginRedirect).not-active.login-link Sign In
             | &emsp;
-            a(href='/elearning/signup?from=' + loginRedirect, class="not-active login-link") Sign Up
-
-      //- END NAVBAR
-
+            a(href='/elearning/signup?from=' + loginRedirect).not-active.login-link Sign Up
+  
     //- BODY
     #body
-      
+
       //- NOTE:
       //- There is no .container wrapping class around body blocks to allow more flexibility in design.
       //- Remember to include it in your templates when you override the intro and content blocks!
 
       //- The Intro block appears above flash messages (used for temporary information display)
-        
-      .elearning-body
-        block intro
-        +flash-messages(messages)
-        block content
+      block intro
+
+      //- Flash messages allow you to display once-off status messages to users, e.g. form
+      //- validation errors, success messages, etc.
+
+      +flash-messages(messages)
+      block content
+
+    
 
     footer.page-footer
       .container
@@ -165,13 +170,30 @@ html
     //- jQuery 1.11.3 is included by default, and required by both Bootstrap
     //- and the KeystoneJS Content Editor. If you are not targeting IE8,
     //- you can upgrade to 2.1.4 (also bundled) for better performance.
-    script(src='/js/jquery/jquery-1.11.3.min.js')
+    //- script(src='/js/jquery/jquery-1.11.3.min.js')
+
+    script(src='/js/highcharts/jquery.min.js')
+    script(src='/js/highcharts/jquery-3.1.1.min.js')
+
+    script(src='/bower_components/highcharts/highcharts.js')
+    script(src='/bower_components/highcharts/highcharts-more.js')
+    script(src='/bower_components/highcharts/modules/stock.js')
+    script(src='/bower_components/highcharts/modules/map.js')
+    script(src='/bower_components/highcharts/modules/exporting.js')
+    script(src='/bower_components/highcharts/modules/data.js')
+    script(src='/bower_components/highcharts/modules/treemap.js')
+    script(src='/bower_components/highcharts/modules/heatmap.js')
+    script(src='/bower_components/highcharts/modules/drilldown.js')
+    script(src='/bower_components/highcharts/modules/solid-gauge.js')
+    script(src='/js/highcharts/custom/world.js')
+    script(src='/js/highcharts/custom/ph-all.js')
+    
 
     //- Customise which Bootstrap javascript files are served by including
     //- them specifically here, instead of bootstrap-3.3.5.min.js
     script(src='/js/bootstrap/bootstrap-3.3.5.min.js')
     script(type="text/javascript" src="/styles/slick/slick.min.js")
-    
+
     //- The KeystoneJS Content Editor provides support for ks-editable data attributes,
     //- which generate links to edit content for users who can access Keystone
     if user && user.canAccessKeystone
