--- a/templates/views/elearning/user/feedback.jade
+++ b/templates/views/elearning/user/feedback.jade
@@ -1,4 +1,4 @@
-extends ../../../layouts/elearning
+extends ../../../layouts/elearning-user
 
 mixin feedbackForm(action)
   if user
@@ -22,14 +22,15 @@ mixin feedbackForm(action)
     a.btn.btn-link(href='/keystone/signin?from=' + loginRedirect) Sign In to Give a Feedback.
 
 block content
-  .row
-    .col-md-3.col-sm-4.dashboard
-      +user-sidenav(section)
-    .col-md-7.col-sm-4  
-      .panel.panel-default.col-md-offset-2
-        .panel-body
-          .elearning-page-header
-            h3 Feedback
-              #[small Give us a feedback with your ELearning Experience!]
-          +feedbackForm()    
-  
+  .elearning-user-body
+    .row
+      .col-md-3.col-sm-4.user-sidenav
+        +user-sidenav(section)
+      .col-md-7.col-sm-4  
+        .panel.panel-default.col-md-offset-2
+          .panel-body
+            .elearning-page-header
+              h3 Feedback
+                #[small Give us a feedback with your ELearning Experience!]
+            +feedbackForm()    
+    
