--- a/templates/views/elearning/user/signup.jade
+++ b/templates/views/elearning/user/signup.jade
@@ -1,4 +1,4 @@
-extends ../../../layouts/elearning
+extends ../../../layouts/elearning-user
 
 block js
   
@@ -63,16 +63,17 @@ block signup
 
 
 block content
-  .user-form
-    .container
-      .row
-        .col-xs-12.col-md-6.col-md-offset-3
-          .panel.panel-default
-            .panel-body
-              .elearning-page-header
-                h3 Sign Up for Elearning
-          
-              if user
-                p You are already logged in.
-              else
-                block signup
+  .elearning-user-body
+    .user-form
+      .container
+        .row
+          .col-xs-12.col-md-6.col-md-offset-3
+            .panel.panel-default
+              .panel-body
+                .elearning-page-header
+                  h3 Sign Up for Elearning
+            
+                if user
+                  p You are already logged in.
+                else
+                  block signup
