--- a/templates/views/elearning/elearning.jade
+++ b/templates/views/elearning/elearning.jade
@@ -44,7 +44,7 @@ block content
       .panel.panel-default
         .panel-body
           +searchResults(paginatedSearchResults.results)
-          +paginate-generic(paginatedSearchResults, redirect)
+          +paginate-page(paginatedSearchResults, searchUrl)
   else 
     if user
       .container
