refactored and added searcch functionality to courseList

--- a/templates/views/elearning/content/courseList.jade
+++ b/templates/views/elearning/content/courseList.jade
@@ -1,4 +1,4 @@
-extends ../../layouts/elearning
+extends ../../../layouts/elearning
 
 mixin allcourses-grid(courses)
   .row
@@ -35,12 +35,19 @@ mixin allcourses-list(courses)
 
 block content
   +search()
-  .container
-    .panel.panel-default
-      .panel-body
-        if viewStyle == 'grid'
-          +allcourses-grid(courses.results)
-        else
-          +allcourses-list(courses.results)
-        +paginate-generic(courses)
+  if searchSubmitted
+    .container
+      .panel.panel-default
+        .panel-body
+          +searchResults(paginatedSearchResults.results)
+          +paginate-page(paginatedSearchResults, searchUrl)
+  else 
+    .container
+      .panel.panel-default
+        .panel-body
+          if viewStyle == 'grid'
+            +allcourses-grid(courses.results)
+          else
+            +allcourses-list(courses.results)
+          +paginate-generic(courses)
 
