refactored popular views and added search functionality

--- a/templates/views/elearning/content/elearning.jade
+++ b/templates/views/elearning/content/elearning.jade
@@ -4,7 +4,7 @@ block css
 
 mixin popular(learningObjects)
   .row
-    a(href=url+'learning-objects/popular?')
+    a(href='/elearning/learning-objects/popular?')
       h2.text-center Popular Lessons
   .row.equal-height
     if learningObjects.length
