--- a/templates/views/elearning/content/popular.jade
+++ b/templates/views/elearning/content/popular.jade
@@ -1,4 +1,4 @@
-extends ../../layouts/elearning
+extends ../../../layouts/elearning
 
 block js
   |  $('.dropdown-toggle').dropdown()S
@@ -46,12 +46,19 @@ mixin popularLO-list(learningObjects)
 
 block content
   +search()
-  .container
-    .panel.panel-default
-      .panel-body
-        if viewStyle == 'grid'
-          +popularLO-grid(paginatePopularLO.results)
-        else
-          +popularLO-list(paginatePopularLO.results)
-        +paginate-popular(paginatePopularLO)
-    
+  if searchSubmitted
+    .container
+      .panel.panel-default
+        .panel-body
+          +searchResults(paginatedSearchResults.results)
+          +paginate-page(paginatedSearchResults, searchUrl)
+  else 
+    .container
+      .panel.panel-default
+        .panel-body
+          if viewStyle == 'grid'
+            +popularLO-grid(paginatePopularLO.results)
+          else
+            +popularLO-list(paginatePopularLO.results)
+          +paginate-page-view-duration(paginatePopularLO)
+      
